Add additional parameter 'COTURN_INTERNAL_RELAY=<boolean>' to use Public or Internal IP. Defaults to 'false', which respect previous OpenVidu default deployment configuration

--- a/openvidu-server/docker/openvidu-coturn/Dockerfile
+++ b/openvidu-server/docker/openvidu-coturn/Dockerfile
@@ -2,13 +2,16 @@ FROM coturn/coturn:4.5.2-alpine
 
 USER root
 
-RUN apk add --no-cache bind-tools
+RUN apk add --no-cache bind-tools grep
 
 # Override detect-external-ip.sh script
 COPY ./detect-external-ip.sh /usr/local/bin/detect-external-ip.sh
 COPY ./docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
+COPY ./discover-internal-ip.sh /usr/local/bin/discover-internal-ip.sh
 
-RUN chmod +x /usr/local/bin/detect-external-ip.sh /usr/local/bin/docker-entrypoint.sh && \
+RUN chmod +x /usr/local/bin/detect-external-ip.sh \
+        /usr/local/bin/docker-entrypoint.sh \
+        /usr/local/bin/discover-internal-ip.sh && \
     chown -R nobody:nogroup /var/lib/coturn/ && \
     touch /turnserver.conf && chown nobody:nogroup /turnserver.conf
 
