--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -52,4 +52,5 @@ COTURN_REDIS_IP=127.0.0.1
 COTURN_REDIS_DBNAME=0
 COTURN_REDIS_PASSWORD=turn
 COTURN_REDIS_CONNECT_TIMEOUT=30
+COTURN_INTERNAL_RELAY=false
 MEDIA_NODES_PUBLIC_IPS=[]
