--- a/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/docker-compose.yml
+++ b/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/docker-compose.yml
@@ -45,7 +45,6 @@ services:
             - COTURN_REDIS_IP=127.0.0.1
             - COTURN_REDIS_PASSWORD=${OPENVIDU_SECRET}
             - COTURN_IP=${COTURN_IP:-auto-ipv4}
-            - COTURN_INTERNAL_RELAY=${COTURN_INTERNAL_RELAY:-false}
             - OPENVIDU_PRO_CLUSTER=true
             - OPENVIDU_PRO_KIBANA_HOST=${OPENVIDU_PRO_KIBANA_HOST:-http://127.0.0.1/kibana}
             - OPENVIDU_PRO_ELASTICSEARCH_HOST=${OPENVIDU_PRO_ELASTICSEARCH_HOST:-http://127.0.0.1:9200}
@@ -90,11 +89,12 @@ services:
         image: openvidu/openvidu-coturn:5.0.0-dev1
         restart: on-failure
         network_mode: host
+        env_file:
+            - .env
         environment:
             - REDIS_IP=127.0.0.1
             - DB_NAME=0
             - DB_PASSWORD=${OPENVIDU_SECRET}
-            - COTURN_INTERNAL_RELAY=${COTURN_INTERNAL_RELAY:-false}
         command:
             - --log-file=stdout
             - --external-ip=$$(detect-external-ip)
