Add OPENVIDU_ENTERPRISE_MEDIA_SERVER property to .env file

--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -340,6 +340,9 @@ ELASTICSEARCH_PASSWORD=
 # Documentation: https://doc-kurento.readthedocs.io/en/stable/features/logging.html
 # KMS_DOCKER_ENV_GST_DEBUG=
 
+# The media server to use in Media Nodes
+OPENVIDU_ENTERPRISE_MEDIA_SERVER=kurento
+
 # Cloudformation configuration
 # --------------------------
 # If you're working outside AWS ignore this section
