--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.override.yml
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.override.yml
@@ -6,17 +6,17 @@ services:
     #   Change this if your want use your own application.
     #   It's very important expose your application in port 5442
     #   and use the http protocol.
-    # 
+    #
     #   Default Application
     #
     #   Openvidu-Call Version: 2.18.0
     #
     # --------------------------------------------------------------
     app:
-        image: openvidu/openvidu-call:2.18.0
+        image: openvidu/openvidu-call:2.19.0-dev7
         restart: on-failure
         network_mode: host
-        environment: 
+        environment:
             - SERVER_PORT=5442
             - OPENVIDU_URL=http://localhost:5443
             - OPENVIDU_SECRET=${OPENVIDU_SECRET}
