--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -37,6 +37,8 @@ OPENVIDU_RECORDING_CUSTOM_LAYOUT=/opt/openvidu/custom-layout
 OPENVIDU_RECORDING_AUTOSTOP_TIMEOUT=120
 OPENVIDU_RECORDING_COMPOSED_URL=
 OPENVIDU_RECORDING_COMPOSED_BASICAUTH=true
+OPENVIDU_RECORDING_IMAGE=
+OPENVIDU_RECORDING_ENABLE_GPU=false
 
 OPENVIDU_STREAMS_VIDEO_MAX_RECV_BANDWIDTH=1000
 OPENVIDU_STREAMS_VIDEO_MIN_RECV_BANDWIDTH=300
