Update .env file with OPENVIDU_EDITION property

--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -15,6 +15,9 @@ OPENVIDU_PRO_LICENSE=
 # OpenVidu SECRET used for apps to connect to OpenVidu server and users to access to OpenVidu Dashboard
 OPENVIDU_SECRET=
 
+# OpenVidu edition to use. Can be "pro" or "enterprise"
+OPENVIDU_EDITION=pro
+
 # Certificate type:
 # - selfsigned:  Self signed certificate. Not recommended for production use.
 #                Users will see an ERROR when connected to web page.
@@ -339,9 +342,6 @@ ELASTICSEARCH_PASSWORD=
 # the verbosity level of the logs of KMS
 # Documentation: https://doc-kurento.readthedocs.io/en/stable/features/logging.html
 # KMS_DOCKER_ENV_GST_DEBUG=
-
-# The media server to use in Media Nodes
-OPENVIDU_ENTERPRISE_MEDIA_SERVER=kurento
 
 # Cloudformation configuration
 # --------------------------
