--- a/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/docker-compose.yml
+++ b/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/docker-compose.yml
@@ -71,6 +71,7 @@ services:
             - REDIS_DB=replicationmanager
             - MEDIANODE_AS_NOTIFICATION_QUEUE=${RM_SQS_QUEUE}
             - AWS_INSTANCE_ID=${AWS_INSTANCE_ID}
+            - RM_OPENVIDU_PRO_CONFIG_S3_BUCKET=${RM_OPENVIDU_PRO_CONFIG_S3_BUCKET}
         logging:
             options:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
