deployment: Let replication-manager access configuration and add new env variables

--- a/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/.env
@@ -361,3 +361,5 @@ RM_REDIS_IP=
 RM_REDIS_PORT=
 RM_SQS_QUEUE=
 RM_CLOUDFORMATION_ARN=
+RM_S3_CONFIGURATION_BUCKET=
+RM_S3_CONFIGURATION_BUCKET_REGION=
