--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.yml
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.yml
@@ -100,6 +100,9 @@ services:
             - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}
             - PROXY_HTTP_PORT=${HTTP_PORT:-}
             - PROXY_HTTPS_PORT=${HTTPS_PORT:-}
+            - PROXY_HTTPS_PROTOCOLS=${HTTPS_PROTOCOLS:-}
+            - PROXY_HTTPS_CIPHERS=${HTTPS_CIPHERS:-}
+            - PROXY_HTTPS_HSTS=${HTTPS_HSTS:-}
             - ALLOWED_ACCESS_TO_DASHBOARD=${ALLOWED_ACCESS_TO_DASHBOARD:-}
             - ALLOWED_ACCESS_TO_RESTAPI=${ALLOWED_ACCESS_TO_RESTAPI:-}
             - PROXY_MODE=PRO
