deployment: multimaster - Create variables for autoscaling group names

--- a/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/.env
@@ -363,3 +363,5 @@ RM_SQS_QUEUE=
 RM_CLOUDFORMATION_ARN=
 RM_S3_CONFIGURATION_BUCKET=
 RM_S3_CONFIGURATION_BUCKET_REGION=
+RM_MEDIA_NODES_AUTOSCALING_GROUP_NAME=
+RM_MASTER_NODES_AUTOSCALING_GROUP_NAME=
