Change infrastructure name of nodes. Add replication-manager logs

--- a/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
+++ b/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
@@ -637,7 +637,7 @@ Resources:
         - !GetAtt 'OpenViduSecurityGroup.GroupId'
       Tags:
         - Key: Name
-          Value: 'OpenVidu Server'
+          Value: 'Master Node'
         - Key: 'ov-cluster-member'
           Value: 'server'
       UserData:
