--- a/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/beats/filebeat.yml
+++ b/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/beats/filebeat.yml
@@ -41,10 +41,10 @@ output:
         when.or:
           - contains:
               container.image.name: openvidu/openvidu-redis
-      - index: "filebeat-nginx-%{+yyyy.MM.dd}"
+      - index: "filebeat-replication-manager-%{+yyyy.MM.dd}"
         when.or:
           - contains:
-              container.image.name: openvidu/openvidu-proxy
+              container.image.name: openvidu/replication-manager
       - index: "filebeat-openvidu-recording-%{+yyyy.MM.dd}"
         when.or:
           - contains:
