openvidu-server: asOptionalInetAddress less restrictive

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
 		<version.gson>2.8.6</version.gson>
 		<version.unirest>1.4.9</version.unirest>
 		<version.jcodec>0.2.5</version.jcodec>
+		<version.commons-validator>1.7</version.commons-validator>
 
 		<version.webdrivermanager>4.2.2</version.webdrivermanager>
 
