--- a/openvidu-server/pom.xml
+++ b/openvidu-server/pom.xml
@@ -268,6 +268,11 @@
 			<version>${version.spring-boot}</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-validator</groupId>
+			<artifactId>commons-validator</artifactId>
+			<version>${version.commons-validator}</version>
+		</dependency>
+		<dependency>
 			<groupId>com.github.docker-java</groupId>
 			<artifactId>docker-java</artifactId>
 			<version>${version.dockerjava}</version>
