deployment - OpenVidu enterprise: Add media server in .env and OPENVIDU_EDITION

--- a/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/aws-asg-openvidu-server-pro/.env
@@ -15,6 +15,12 @@ OPENVIDU_PRO_LICENSE=
 # OpenVidu SECRET used for apps to connect to OpenVidu server and users to access to OpenVidu Dashboard
 OPENVIDU_SECRET=
 
+# OpenVidu edition to use. Can be "pro" or "enterprise"
+OPENVIDU_EDITION=enterprise
+
+# Media Server to use
+OPENVIDU_ENTERPRISE_MEDIA_SERVER=
+
 # Certificate type:
 # - selfsigned:  Self signed certificate. Not recommended for production use.
 #                Users will see an ERROR when connected to web page.
