--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.yml
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.yml
@@ -93,6 +93,7 @@ services:
             - ./certificates:/etc/letsencrypt
             - ./owncert:/owncert
             - ./custom-nginx-vhosts:/etc/nginx/vhost.d/
+            - ./custom-nginx-locations:/custom-nginx-locations
             - ${OPENVIDU_RECORDING_CUSTOM_LAYOUT}:/opt/openvidu/custom-layout
         environment:
             - DOMAIN_OR_PUBLIC_IP=${DOMAIN_OR_PUBLIC_IP}
