Update docker-compose files. Remove not needed chmod

--- a/openvidu-server/deployments/ce/docker-compose/docker-compose.yml
+++ b/openvidu-server/deployments/ce/docker-compose/docker-compose.yml
@@ -22,7 +22,7 @@ version: '3.1'
 services:
 
     openvidu-server:
-        image: openvidu/openvidu-server:2.20.0
+        image: openvidu/openvidu-server:2.21.0-dev1
         restart: on-failure
         network_mode: host
         entrypoint: ['/usr/local/bin/entrypoint.sh']
@@ -65,7 +65,7 @@ services:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     redis:
-        image: openvidu/openvidu-redis:3.0.0
+        image: openvidu/openvidu-redis:4.0.0-dev1
         restart: always
         network_mode: host
         environment:
@@ -75,7 +75,7 @@ services:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     coturn:
-        image: openvidu/openvidu-coturn:5.0.0
+        image: openvidu/openvidu-coturn:6.0.0-dev1
         restart: on-failure
         network_mode: host
         environment:
@@ -96,7 +96,7 @@ services:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     nginx:
-        image: openvidu/openvidu-proxy:7.0.0
+        image: openvidu/openvidu-proxy:8.0.0-dev1
         restart: on-failure
         network_mode: host
         volumes:
