--- a/openvidu-server/deployments/enterprise/master-node/docker-compose.yml
+++ b/openvidu-server/deployments/enterprise/master-node/docker-compose.yml
@@ -22,7 +22,7 @@ version: '3.1'
 services:
 
     openvidu-server:
-        image: openvidu/openvidu-server-pro:2.20.0
+        image: openvidu/openvidu-server-pro:2.21.0-dev1
         restart: on-failure
         network_mode: host
         entrypoint: ['/usr/local/bin/entrypoint.sh']
@@ -56,7 +56,7 @@ services:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     replication-manager:
-        image: openvidu/replication-manager:1.0.0-beta1
+        image: openvidu/replication-manager:2.21.0-dev1
         restart: always
         network_mode: host
         volumes:
@@ -83,7 +83,7 @@ services:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     redis:
-        image: openvidu/openvidu-redis:3.0.0
+        image: openvidu/openvidu-redis:4.0.0-dev1
         restart: always
         network_mode: host
         environment:
@@ -93,7 +93,7 @@ services:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     coturn:
-        image: openvidu/openvidu-coturn:5.0.0
+        image: openvidu/openvidu-coturn:6.0.0-dev1
         restart: on-failure
         network_mode: host
         env_file:
