--- a/openvidu-server/deployments/pro/docker-compose/media-node/docker-compose.yml
+++ b/openvidu-server/deployments/pro/docker-compose/media-node/docker-compose.yml
@@ -16,14 +16,14 @@ version: '3.1'
 
 services:
     media-node-controller:
-        image: openvidu/media-node-controller:5.0.0
+        image: openvidu/media-node-controller:6.0.0-dev1
         restart: always
         ulimits:
             core: -1
         entrypoint: ['/bin/sh', '-c', '/beats/copy_config_files.sh && /usr/local/bin/entrypoint.sh']
         environment:
             - KMS_IMAGE=kurento/kurento-media-server:6.16.0
-            - MEDIASOUP_IMAGE=openvidu/mediasoup-controller:2.20.0-beta2
+            - MEDIASOUP_IMAGE=openvidu/mediasoup-controller:2.21.0-dev1
             - METRICBEAT_IMAGE=docker.elastic.co/beats/metricbeat-oss:7.8.0
             - FILEBEAT_IMAGE=docker.elastic.co/beats/filebeat-oss:7.8.0
             - OPENVIDU_RECORDING_IMAGE=openvidu/openvidu-recording:2.19.0
