--- a/openvidu-server/deployments/enterprise/master-node/docker-compose.yml
+++ b/openvidu-server/deployments/enterprise/master-node/docker-compose.yml
@@ -22,7 +22,7 @@ version: '3.1'
 services:
 
     openvidu-server:
-        image: openvidu/openvidu-server-pro:2.21.0-dev1
+        image: openvidu/openvidu-server-pro:2.21.0-beta1
         restart: on-failure
         network_mode: host
         entrypoint: ['/usr/local/bin/entrypoint.sh']
