If COTURN_PORT not defined or errored, set 3478 by default

--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -55,4 +55,5 @@ COTURN_REDIS_DBNAME=0
 COTURN_REDIS_PASSWORD=turn
 COTURN_REDIS_CONNECT_TIMEOUT=30
 COTURN_INTERNAL_RELAY=false
+COTURN_PORT=3478
 MEDIA_NODES_PUBLIC_IPS=[]
