--- a/openvidu-server/deployments/enterprise/master-node/docker-compose.override.yml
+++ b/openvidu-server/deployments/enterprise/master-node/docker-compose.override.yml
@@ -13,7 +13,7 @@ services:
     #
     # --------------------------------------------------------------
     app:
-        image: openvidu/openvidu-call:2.21.0-dev1
+        image: openvidu/openvidu-call:2.21.0-beta1
         restart: on-failure
         network_mode: host
         environment:
