deployment: Add option to create AMI using master tag docker image

--- a/openvidu-server/deployments/pro/aws/cfn-mkt-kms-ami.yaml.template
+++ b/openvidu-server/deployments/pro/aws/cfn-mkt-kms-ami.yaml.template
@@ -75,6 +75,19 @@ Resources:
                 cd /opt
                 curl https://s3-eu-west-1.amazonaws.com/aws.openvidu.io/install_media_node_OPENVIDU_VERSION.sh | bash
 
+                if [[ USE_MASTER_DOCKER_IMAGE == "true" ]]; then
+
+                  # docker-compose.yml replace with master version
+                  IMAGES="$(cat docker-compose.yml | grep 'image: openvidu/' | cut -d':' -f2 | sed -e 's/^[[:space:]]*//')"
+                  for IMG in $IMAGES
+                  do
+                    sed -i "s|$IMG.*|$IMG:master|g" docker-compose.yml
+                  done
+
+                  # Environment variables from docker-compose.yml
+                  sed -i "s|MEDIASOUP_IMAGE=openvidu/mediasoup-controller.*|MEDIASOUP_IMAGE=openvidu/mediasoup-controller:master|g" docker-compose.yml
+                fi
+
                 # Define Installation Type
                 sed -i "s/Installation Mode: On Premises/Installation Mode: Cloud Formation/" /opt/kms/docker-compose.yml
 
