deployment: Missing 'pushd' in AMIs CFs

--- a/openvidu-server/deployments/ce/aws/cfn-mkt-ov-ce-ami.yaml.template
+++ b/openvidu-server/deployments/ce/aws/cfn-mkt-ov-ce-ami.yaml.template
@@ -76,7 +76,7 @@ Resources:
                 curl https://s3-eu-west-1.amazonaws.com/aws.openvidu.io/install_openvidu_OPENVIDU_VERSION.sh | bash
 
                 if [[ USE_MASTER_DOCKER_IMAGE == "true" ]]; then
-
+                  pushd openvidu
                   # docker-compose.yml replace with master version
                   IMAGES="$(cat docker-compose.yml | grep 'image: openvidu/' | cut -d':' -f2 | sed -e 's/^[[:space:]]*//')"
                   for IMG in $IMAGES
@@ -90,6 +90,7 @@ Resources:
                   do
                     sed -i "s|$IMG.*|$IMG:master|g" docker-compose.override.yml
                   done
+                  popd
                 fi
 
                 # Define Installation Type
