--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -1,6 +1,6 @@
 node('container') {
 
-  sh 'docker rm -f e2e chrome firefox opera || true'
+  sh 'docker rm -f e2e chrome firefox opera mediasoup || true'
   sh 'rm -rf /opt/openvidu/* || true'
   sh 'wget https://github.com/OpenVidu/openvidu/raw/master/openvidu-test-e2e/docker/barcode.y4m -P /opt/openvidu'
   sh 'wget https://github.com/OpenVidu/openvidu/raw/master/openvidu-test-e2e/docker/fakeaudio.wav -P /opt/openvidu'
@@ -10,6 +10,7 @@ node('container') {
   docker.image('selenium/standalone-chrome:latest').pull()
   docker.image('selenium/standalone-firefox:latest').pull()
   docker.image('selenium/standalone-opera:latest').pull()
+  docker.image('openvidu/mediasoup-controller:$MEDIASOUP_CONTROLLER_DOCKER_VERSION').pull()
 
   docker.image('openvidu/openvidu-test-e2e:$DISTRO').inside('--name e2e -p 4200:4200 -p 4443:4443 -p 5555:5555 -u root -e MY_UID=0 -v /var/run/docker.sock:/var/run/docker.sock:rw -v /dev/shm:/dev/shm -v /opt/openvidu:/opt/openvidu --privileged') {
 
@@ -126,53 +127,94 @@ node('container') {
       '''.stripIndent())
     }
 
-    stage ('Environment Launch') {
-      sh 'openssl req -newkey rsa:2048 -new -nodes -x509 -days 3650 -subj "/CN=www.mydom.com/O=My Company LTD./C=US" -keyout /opt/openvidu/testapp/key.pem -out /opt/openvidu/testapp/cert.pem'
-      sh 'cd /opt/openvidu/testapp && http-server -S -p 4200 &> /opt/openvidu/testapp.log &'
-      sh '/usr/bin/kurento-media-server &> /kms.log &'
-      sh 'until $(curl --insecure --output /dev/null --silent http://127.0.0.1:8888/kurento); do echo "Waiting for KMS..."; sleep 1; done'
-      sh(script: '''#!/bin/bash -xe
-        if [ "$DOCKER_RECORDING_VERSION" != "default" ]; then
-          echo "Using custom openvidu-recording tag: $DOCKER_RECORDING_VERSION"
-          java -jar -DDOMAIN_OR_PUBLIC_IP=172.17.0.1 -DOPENVIDU_SECRET=MY_SECRET -DHTTPS_PORT=4443 -DOPENVIDU_RECORDING=true -DOPENVIDU_RECORDING_CUSTOM_LAYOUT=/opt/openvidu/test-layouts -DOPENVIDU_RECORDING_VERSION=$DOCKER_RECORDING_VERSION -DOPENVIDU_WEBHOOK=true -DOPENVIDU_WEBHOOK_ENDPOINT=http://127.0.0.1:7777/webhook /opt/openvidu/openvidu-server-*.jar &> openvidu-server.log &
-        else
-          echo "Using default openvidu-recording tag"
-          java -jar -DDOMAIN_OR_PUBLIC_IP=172.17.0.1 -DOPENVIDU_SECRET=MY_SECRET -DHTTPS_PORT=4443 -DOPENVIDU_RECORDING=true -DOPENVIDU_RECORDING_CUSTOM_LAYOUT=/opt/openvidu/test-layouts -DOPENVIDU_WEBHOOK=true -DOPENVIDU_WEBHOOK_ENDPOINT=http://127.0.0.1:7777/webhook /opt/openvidu/openvidu-server-*.jar &> openvidu-server.log &
-        fi
-      '''.stripIndent())
-      sh 'until $(curl --insecure --output /dev/null --silent --head --fail https://OPENVIDUAPP:MY_SECRET@localhost:4443/); do echo "Waiting for openvidu-server..."; sleep 2; done'
-    }
-
     docker.image('selenium/standalone-chrome:latest').withRun('-p 6666:4444 --name chrome --shm-size=1g -v /opt/openvidu:/opt/openvidu') { a ->
       docker.image('selenium/standalone-firefox:latest').withRun('-p 6667:4444 --name firefox --shm-size=1g') { b ->
         docker.image('selenium/standalone-opera:latest').withRun('-p 6668:4444 --name opera --shm-size=1g') { c ->
-
-          stage ('OpenVidu E2E tests') {
-            try {
-              sh(script: '''#!/bin/bash -xe
-                cd openvidu
-                if [[ $OPENVIDU_TESTE2E_COMMIT != "default" ]]; then
-                  git checkout -f $OPENVIDU_TESTE2E_COMMIT
-                fi
-                cd openvidu-test-browsers
-                mvn --batch-mode versions:set -DnewVersion=TEST && mvn clean install
-                cd ..
-                mvn --batch-mode versions:set-property -Dproperty=version.openvidu.java.client -DnewVersion=TEST
-                mvn --batch-mode versions:set-property -Dproperty=version.openvidu.test.browsers -DnewVersion=TEST
-                cd openvidu-test-e2e
-                mvn -DskipTests=true clean install
-                sudo mvn --batch-mode -Dtest=OpenViduTestAppE2eTest -DAPP_URL=https://172.17.0.1:4200/ -DOPENVIDU_URL=https://172.17.0.1:4443/ -DREMOTE_URL_CHROME=http://172.17.0.1:6666/wd/hub/ -DREMOTE_URL_FIREFOX=http://172.17.0.1:6667/wd/hub/ -DREMOTE_URL_OPERA=http://172.17.0.1:6668/wd/hub/ -DEXTERNAL_CUSTOM_LAYOUT_URL=http://172.17.0.1:5555 -DEXTERNAL_CUSTOM_LAYOUT_PARAMS=sessionId,CUSTOM_LAYOUT_SESSION,secret,MY_SECRET test
-                git checkout -f $OPENVIDU_COMMIT
-              '''.stripIndent())
-            }
-            finally {
-              junit 'openvidu/openvidu-test-e2e/**/target/surefire-reports/TEST-*.xml'
-              archiveArtifacts artifacts: '**/openvidu-server.log'
-            }
+          stage ('Environment Launch Kurento') {
+            environmentLaunch('kurento')
           }
-
+          stage ('OpenVidu Kurento E2E tests') {
+            openViduE2ETest('kurento')
+            environmentStop()
+          }
+          stage ('Environment Launch Mediasoup') {
+            environmentLaunch('mediasoup')
+          }
+          stage ('OpenVidu Mediasoup E2E tests') {
+            openViduE2ETest('mediasoup')
+            environmentStop()
+          }
         }
       }
+    }
+  }
+}
+
+def environmentLaunch(mediaServer) {
+  sh 'openssl req -newkey rsa:2048 -new -nodes -x509 -days 3650 -subj "/CN=www.mydom.com/O=My Company LTD./C=US" -keyout /opt/openvidu/testapp/key.pem -out /opt/openvidu/testapp/cert.pem'
+  sh 'cd /opt/openvidu/testapp && http-server -S -p 4200 &> /opt/openvidu/testapp.log &'
+  if (mediaServer == 'kurento') {
+    sh '/usr/bin/kurento-media-server &> /kms.log &'
+  } else if (mediaServer == 'mediasoup') {
+    sh(script: '''#!/bin/bash -xe
+      docker run --name=mediasoup --env=KMS_MIN_PORT=40000 --env=KMS_MAX_PORT=65535 \
+      --env=OPENVIDU_PRO_LICENSE=$OPENVIDU_PRO_LICENSE \
+      --env=OPENVIDU_PRO_LICENSE_API=$OPENVIDU_PRO_LICENSE_API \
+      --env=WEBRTC_LISTENIPS_0_ANNOUNCEDIP=172.17.0.1 --env=WEBRTC_LISTENIPS_0_IP=172.17.0.1 \
+      --volume=/opt/openvidu/recordings:/opt/openvidu/recordings --network=host --restart=always --detach=true \
+      openvidu/mediasoup-controller:$MEDIASOUP_CONTROLLER_DOCKER_VERSION
+    '''.stripIndent())
+  }
+  script {
+    env.mediaServer = mediaServer
+    sh(script: '''#!/bin/bash -xe
+      KMS_IP=127.0.0.1
+      if [[ "${mediaServer}" == "mediasoup" ]]; then
+        KMS_IP=172.17.0.1
+      fi
+      until $(curl --insecure --output /dev/null --silent http://${KMS_IP}:8888/kurento); do echo "Waiting for ${mediaServer}..."; sleep 1; done
+      if [ "$DOCKER_RECORDING_VERSION" != "default" ]; then
+        echo "Using custom openvidu-recording tag: $DOCKER_RECORDING_VERSION"
+        java -jar -DKMS_URIS=[\\"ws://${KMS_IP}:8888/kurento\\"] -DDOMAIN_OR_PUBLIC_IP=172.17.0.1 -DOPENVIDU_SECRET=MY_SECRET -DHTTPS_PORT=4443 -DOPENVIDU_RECORDING=true -DOPENVIDU_RECORDING_CUSTOM_LAYOUT=/opt/openvidu/test-layouts -DOPENVIDU_RECORDING_VERSION=$DOCKER_RECORDING_VERSION -DOPENVIDU_WEBHOOK=true -DOPENVIDU_WEBHOOK_ENDPOINT=http://127.0.0.1:7777/webhook /opt/openvidu/openvidu-server-*.jar &> openvidu-server.log &
+      else
+        echo "Using default openvidu-recording tag"
+        java -jar -DKMS_URIS=[\\"ws://${KMS_IP}:8888/kurento\\"] -DDOMAIN_OR_PUBLIC_IP=172.17.0.1 -DOPENVIDU_SECRET=MY_SECRET -DHTTPS_PORT=4443 -DOPENVIDU_RECORDING=true -DOPENVIDU_RECORDING_CUSTOM_LAYOUT=/opt/openvidu/test-layouts -DOPENVIDU_WEBHOOK=true -DOPENVIDU_WEBHOOK_ENDPOINT=http://127.0.0.1:7777/webhook /opt/openvidu/openvidu-server-*.jar &> openvidu-server.log &
+      fi
+    '''.stripIndent())
+  }
+  sh 'until $(curl --insecure --output /dev/null --silent --head --fail https://OPENVIDUAPP:MY_SECRET@localhost:4443/); do echo "Waiting for openvidu-server..."; sleep 2; done'
+}
+
+def environmentStop() {
+  sh 'kill -9 $(pidof kurento-media-server) || true'
+  sh 'kill -9 $(pgrep -f /opt/openvidu/openvidu-server) || true'
+  sh 'docker rm -f mediasoup || true'
+}
+
+def openViduE2ETest(mediaServer) {
+  script {
+    env.mediaServer = mediaServer
+    try {
+      sh(script: '''#!/bin/bash -xe
+        cd openvidu
+        if [[ $OPENVIDU_TESTE2E_COMMIT != "default" ]]; then
+          git checkout -f $OPENVIDU_TESTE2E_COMMIT
+        fi
+        cd openvidu-test-browsers
+        mvn --batch-mode versions:set -DnewVersion=TEST && mvn clean install
+        cd ..
+        mvn --batch-mode versions:set-property -Dproperty=version.openvidu.java.client -DnewVersion=TEST
+        mvn --batch-mode versions:set-property -Dproperty=version.openvidu.test.browsers -DnewVersion=TEST
+        cd openvidu-test-e2e
+        mvn -DskipTests=true clean install
+        sudo mvn --batch-mode -DMEDIA_SERVER=${mediaServer} -Dtest=OpenViduTestAppE2eTest -DAPP_URL=https://172.17.0.1:4200/ -DOPENVIDU_URL=https://172.17.0.1:4443/ -DREMOTE_URL_CHROME=http://172.17.0.1:6666/wd/hub/ -DREMOTE_URL_FIREFOX=http://172.17.0.1:6667/wd/hub/ -DREMOTE_URL_OPERA=http://172.17.0.1:6668/wd/hub/ -DEXTERNAL_CUSTOM_LAYOUT_URL=http://172.17.0.1:5555 -DEXTERNAL_CUSTOM_LAYOUT_PARAMS=sessionId,CUSTOM_LAYOUT_SESSION,secret,MY_SECRET test
+        git checkout -f $OPENVIDU_COMMIT
+      '''.stripIndent())
+    } catch (err) {
+      echo "Test failed"
+    } finally {
+      junit 'openvidu/openvidu-test-e2e/**/target/surefire-reports/TEST-*.xml'
+      archiveArtifacts artifacts: '**/openvidu-server.log'
     }
   }
 }
