--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -212,6 +212,7 @@ def openViduE2ETest(mediaServer) {
       '''.stripIndent())
     } catch (err) {
       echo "Test failed"
+      currentBuild.result = 'FAILURE'
     } finally {
       junit 'openvidu/openvidu-test-e2e/**/target/surefire-reports/TEST-*.xml'
       archiveArtifacts artifacts: '**/openvidu-server.log'
