--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -164,7 +164,7 @@ node('container') {
           } finally {
             environmentStop()
             junit 'openvidu/openvidu-test-e2e/**/target/surefire-reports/TEST-*.xml'
-            archiveArtifacts artifacts: '**/openvidu-server.log'
+            archiveArtifacts artifacts: '**/openvidu-server-*.log'
           }
         }
       }
