--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -101,7 +101,7 @@ node('container') {
           cd ..
         '''.stripIndent())
         }
-      }, 'OpenVidu parent build': {
+      }, 'OpenVidu Server build': {
         stage('OpenVidu parent build') {
           sh(script: '''#!/bin/bash -xe
             if [[ $KURENTO_JAVA_COMMIT != "default" ]]; then
@@ -112,24 +112,21 @@ node('container') {
           sh 'cd openvidu && mvn --batch-mode versions:set-property -Dproperty=version.openvidu.java.client -DnewVersion=TEST'
           sh 'cd openvidu && mvn --batch-mode -DskipTests=true clean install'
         }
+        stage('OpenVidu Server unit tests') {
+          sh 'cd openvidu/openvidu-server && mvn --batch-mode -Dtest=io.openvidu.server.test.unit.*Test test'
+        }
+        stage('OpenVidu Server integration tests') {
+          sh 'cd openvidu/openvidu-server && mvn --batch-mode -Dtest=io.openvidu.server.test.integration.*Test test'
+        }
+        stage('OpenVidu Server build') {
+          sh(script: '''#!/bin/bash -xe
+            cd openvidu/openvidu-server/src/dashboard && npm install --unsafe-perm && npm install /opt/openvidu/openvidu-browser-*.tgz && export NG_CLI_ANALYTICS="false" && npm run build-prod
+            cd ../..
+            mvn --batch-mode package
+            cp target/openvidu-server*.jar /opt/openvidu
+          '''.stripIndent())
+        }
       }
-    }
-
-    stage('OpenVidu Server unit tests') {
-      sh 'cd openvidu/openvidu-server && mvn --batch-mode -Dtest=io.openvidu.server.test.unit.*Test test'
-    }
-
-    stage('OpenVidu Server integration tests') {
-      sh 'cd openvidu/openvidu-server && mvn --batch-mode -Dtest=io.openvidu.server.test.integration.*Test test'
-    }
-
-    stage('OpenVidu Server build') {
-      sh(script: '''#!/bin/bash -xe
-        cd openvidu/openvidu-server/src/dashboard && npm install --unsafe-perm && npm install /opt/openvidu/openvidu-browser-*.tgz && export NG_CLI_ANALYTICS="false" && npm run build-prod
-        cd ../..
-        mvn --batch-mode package
-        cp target/openvidu-server*.jar /opt/openvidu
-      '''.stripIndent())
     }
 
     docker.image('selenium/standalone-chrome:latest').withRun('-p 6666:4444 --name chrome --shm-size=1g -v /opt/openvidu:/opt/openvidu') { a ->
